feat: add more LLM sdk libs

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,25 @@
-# LLM Provider (at least one required)
+# LLM Provider API Keys (set the one(s) you use)
 ANTHROPIC_API_KEY=sk-ant-...
 OPENAI_API_KEY=sk-...
+GOOGLE_API_KEY=
+MISTRAL_API_KEY=
+# AWS Bedrock uses standard AWS credentials (AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_REGION)
 
-# Model (any LiteLLM-supported model string)
+# OpenAI-compatible providers (optional)
+# GROQ_API_KEY=
+# GROQ_API_BASE=https://api.groq.com/openai/v1
+# TOGETHER_API_KEY=
+# TOGETHER_API_BASE=https://api.together.xyz/v1
+# AZURE_API_KEY=
+# AZURE_API_BASE=https://your-resource.openai.azure.com
+# OLLAMA_API_BASE=http://localhost:11434/v1
+# VLLM_API_BASE=http://localhost:8000/v1
+
+# Model (prefix determines which provider SDK to use)
+# Examples: anthropic/claude-sonnet-4-5-20250929, openai/gpt-4o, gemini/gemini-2.0-flash,
+#           mistral/mistral-large-latest, bedrock/anthropic.claude-3-sonnet,
+#           groq/llama-3.1-70b, together/meta-llama/Llama-3-70b-chat-hf
+# Unknown prefixes or no prefix fall back to LiteLLM
 ALPHACLAW_MODEL=anthropic/claude-sonnet-4-5-20250929
 
 # Database
