--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,20 @@ dependencies = [
     "httpx>=0.28",
 ]
 
+[project.optional-dependencies]
+openai = ["openai>=1.50"]
+anthropic = ["anthropic>=0.40"]
+google = ["google-genai>=1.0"]
+mistral = ["mistralai>=1.0"]
+bedrock = ["boto3>=1.35"]
+all-llm = [
+    "openai>=1.50",
+    "anthropic>=0.40",
+    "google-genai>=1.0",
+    "mistralai>=1.0",
+    "boto3>=1.35",
+]
+
 [project.scripts]
 alphaclaw = "alphaclaw.main:main"
 
@@ -54,4 +68,9 @@ dev = [
     "pytest>=8.0",
     "pytest-asyncio>=0.24",
     "pytest-httpx>=0.35",
+    "openai>=1.50",
+    "anthropic>=0.40",
+    "google-genai>=1.0",
+    "mistralai>=1.0",
+    "boto3>=1.35",
 ]
