--- a/compose.yml
+++ b/compose.yml
@@ -29,3 +29,10 @@ services:
       - "8000:8000"
     volumes:
       - ./data/alphaclaw:/app/data
+
+  web:
+    build: ./web
+    ports:
+      - "3000:3000"
+    environment:
+      VITE_API_URL: http://localhost:8000
